--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gaia-seed-fly</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Projet Gaia - Saint Joseph Dijon 25-26</title>
+    <meta name="description" content="Reforester intelligemment" />
+    <meta name="author" content="Groupe Gaia" />
 
-    <meta property="og:title" content="gaia-seed-fly" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Projet Gaia - Saint Joseph Dijon 25-26" />
+    <meta property="og:description" content="Reforester intelligemment" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://lens.usercontent.google.com/image?vsrid=CKmJscCj08HYTBACGAEiJDdlY2M0MjEwLWI0YWYtNDM5My05MjNiLTQ5MjBmMmFlODQ3OTIGIgJkaCgEOPPhldfuk48D&gsessionid=NK5pnFuaar45JYZ5UgeoadkHj1W6-o8sFJkOFosfq2S8Bg0sJLiLjA" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
