Update title for reforestation project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Gaia - Saint Joseph Dijon 25-26</title>
+    <title>Gaia - Reforestation intelligente</title>
     <meta name="description" content="Reforester intelligemment" />
     <meta name="author" content="Groupe Gaia" />
 
