--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <meta name="description" content="Reforester intelligemment" />
     <meta name="author" content="Groupe Gaia" />
 
-    <meta property="og:title" content="Projet Gaia - Saint Joseph Dijon 25-26" />
+    <meta property="og:title" content="Gaia - Reforestation intelligente" />
     <meta property="og:description" content="Reforester intelligemment" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lens.usercontent.google.com/image?vsrid=CKmJscCj08HYTBACGAEiJDdlY2M0MjEwLWI0YWYtNDM5My05MjNiLTQ5MjBmMmFlODQ3OTIGIgJkaCgEOPPhldfuk48D&gsessionid=NK5pnFuaar45JYZ5UgeoadkHj1W6-o8sFJkOFosfq2S8Bg0sJLiLjA" />
-
-    <!-- Premium Typography -->
+    <meta property="og:image" content="https://scontent-cdg4-2.cdninstagram.com/v/t51.2885-19/503950335_17843104674509101_8727422873797054438_n.jpg?stp=dst-jpg_s150x150_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDI0LmMyIn0&_nc_ht=scontent-cdg4-2.cdninstagram.com&_nc_cat=101&_nc_oc=Q6cZ2QGgcmoit7s6xJguUU8OQLfnXa7c1pqGbbM7IkMBD8Sp_lJWQKHTmpnJmMyhoSJFvvA&_nc_ohc=PbdiJZS2DZQQ7kNvwHM4_6e&_nc_gid=0fXzTextIqHl2szgjEvxUw&edm=AOQ1c0wBAAAA&ccb=7-5&oh=00_AfkWhUIpO02iAayLhS29FIUjnOBUSraI7WXRMSQbKzHCEA&oe=6934C3B6&_nc_sid=8b3546" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
